--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -174,7 +174,7 @@
 
 .content {
   position: relative;
-  width: 90%;
+  width: 100%;
   max-width: 400px;
   margin: auto;
   overflow: hidden;
@@ -203,6 +203,7 @@
 .content-image{
   width: 100%;
   border-radius: 5px;
+  height: 152px
 }
 
 .content-details {
