--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -219,8 +219,9 @@ input {
 .forgot-pass {
   margin-top: 15px;
   text-align: center;
-  font-size: 12px;
-  color: #cfcfcf;
+    font-size: 12px;
+    color: #525252fa;
+    font-weight: 600;
 }
 
 .submit {
