--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,7 +9,7 @@ body {
   background: #ededed;
 }
 
-input, button {
+input, button, select {
   border: none;
   outline: none;
   background: none;
@@ -38,7 +38,7 @@ input, button {
   transition: -webkit-transform 1.2s ease-in-out;
   transition: transform 1.2s ease-in-out;
   transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-  padding: 50px 30px 0;
+  padding: 30px 30px 0;
 }
 
 .sub-cont {
@@ -193,11 +193,15 @@ h2 {
   font-size: 26px;
   text-align: center;
 }
-
+.error{
+      color: #dc3545!important;
+    margin: 0px;
+    font-size: 13px;
+}
 label {
   display: block;
   width: 260px;
-  margin: 25px auto 0;
+  margin: 8px auto 0;
   text-align: center;
 }
 label span {
@@ -209,11 +213,18 @@ label span {
 input {
   display: block;
   width: 100%;
-  margin-top: 5px;
-  padding-bottom: 5px;
   font-size: 16px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
   text-align: center;
+}
+select {
+  display: block;
+  width: 100%;
+  border: none;
+  font-size: 16px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+  text-align: center;
+
 }
 
 .forgot-pass {
