--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -14,6 +14,15 @@
     position: absolute;
     right: 0;
 }*/
+.card_vw{
+  box-shadow: 0px 1px 15px 0px rgba(51, 51, 51, 0.2);
+    /* flex: 1 1 auto; */
+    display: flex;
+    /*background: white*/
+}
+.upload_block{
+  padding: 58px 3px;
+}
 .timeline-info ul li {
     display: inline-block;
     margin-right: 20px;
