--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -35,7 +35,10 @@ small {
   transform: rotate(180deg);
   transition: transform .5s linear;
 }
-
+.post_image{
+  height: 240px !important;
+    width: 238px !important;
+}
 .dot {
   height: 3px;
   width: 3px;
