--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -46,6 +46,57 @@ small {
   border-radius: 50%;
   display: inline-block;
 }
+.like_lst_{
+  display: none;
+  overflow-x: scroll;
+    width: 120px;
+    background: #0000008f !important;
+    color: white;
+    border-radius: 5px;
+    top: 30px !important;
+    padding: 4px 8px;
+    z-index: 1;
+    text-align: left;
+    font-size: 10px;
+    height: 60px !important;
+    max-height: 130px;
+}
+
+.like_lst_ a{
+      padding: 0px !important;
+    color: white !important;
+    font-size: 11px !important;
+    margin-top: 2px !important;
+}
+.like_lst_ a:hover {
+    background-color: #ddd0 !important;
+    color: #ff5e3a !important;
+}
+/*like_lst_::-webkit-scrollbar {
+    display: none;
+}
+
+ Hide scrollbar for IE and Edge 
+.like_lst_ {
+    -ms-overflow-style: none;
+}*/
+
+.like_lst_::-webkit-scrollbar {
+    width: 1em;
+    height: 0px;
+}
+
+.like_lst_::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.like_lst_::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+   border-radius: 10px;
+  outline: 1px solid slategrey;
+
+}
+
 
 .pad_days
 {
@@ -393,7 +444,7 @@ width: 32px;
     width: 31px;
     height: 31px;
     padding: 4px;
-    background: #ff5e3a;
+    background: #ff5e3a !important;
    
   }
 
