--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -15,7 +15,11 @@
     right: 0;
 }*/
 .h_277{
-      height: 277px;
+  height: 277px;
+}
+.h_220
+{
+  height: 220px;
 }
 .card_vw{
   box-shadow: 0px 1px 15px 0px rgba(51, 51, 51, 0.2);
